Bug 228542 Divide by zero bug in Universal charset detecter patch by vladimir@lukianov.name r=smontagu sr=roc